Fixes overflow style issue in external collections

--- a/src/styles/external-collections.scss
+++ b/src/styles/external-collections.scss
@@ -1,6 +1,7 @@
 .external-collections-page {
   width: 100%;
   padding: 2rem 1.5rem 3rem;
+  box-sizing: border-box;
 
   .collections-header {
     width: 100%;
